--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
       <section>
         <input type="text" placeholder="Buscar" />
-        <button>Buscar</button>
+        <button class="js__buttonSearch">Buscar</button>
         <button>Actualizar</button>
       </section>
     </header>
