scss partial done yet it does not work the style I applied. I have to review it or ask for support. I left the Yanelis review class 1 at 30 minute

--- a/public/main.html
+++ b/public/main.html
@@ -1,11 +1,15 @@
 <section>
   <ul>
     Lista de cócteles
-    <li>Margarita</li>
-    <li>Blue Margarita</li>
-    <li>Tommy's Margarita</li>
-    <li>Manhattan</li>
-    <li>Piña colada</li>
+    <li class="list">
+      <div class="general__cocktails">
+        <div class="cocktail__box">Margarita</div>
+        <div class="cocktail__box">Blue Margarita</div>
+        <div class="cocktail__box">Tommy's Margarita</div>
+        <div class="cocktail__box">Manhattan</div>
+        <div class="cocktail__box">Piña colada</div>
+      </div>
+    </li>
   </ul>
 </section>
 
