Danelis help, html changed and I carried out reviweing the material because I do not understand how to do the next step

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../scss/main.scss" />
+    <link rel="stylesheet" href="./assets/css/main.css" />
     <title>Rosa Codina's cocktails site</title>
   </head>
 
@@ -22,17 +22,13 @@
     </header>
 
     <section>
-      <ul>
-        Lista de cócteles
-        <li class="list">
-          <div class="general__cocktails">
-            <div class="cocktail__box">Margarita</div>
-            <div class="cocktail__box">Blue Margarita</div>
-            <div class="cocktail__box">Tommy's Margarita</div>
-            <div class="cocktail__box">Manhattan</div>
-            <div class="cocktail__box">Piña colada</div>
-          </div>
-        </li>
+      <h2>Lista de cócteles</h2>
+      <ul class="list js__list">
+        <li class="list__box">Margarita</li>
+        <li class="list__box">Blue Margarita</li>
+        <li class="list__box">Tommy's Margarita</li>
+        <li class="list__box">Manhattan</li>
+        <li class="list__box">Piña colada</li>
       </ul>
     </section>
 
@@ -42,6 +38,6 @@
       </div>
     </footer>
 
-    <script src="../js/main.js"></script>
+    <script src="./assets/js/main.js"></script>
   </body>
 </html>
