--- a/public/main.html
+++ b/public/main.html
@@ -1,15 +1,11 @@
 <section>
-  <ul>
-    Lista de cócteles
-    <li class="list">
-      <div class="general__cocktails">
-        <div class="cocktail__box">Margarita</div>
-        <div class="cocktail__box">Blue Margarita</div>
-        <div class="cocktail__box">Tommy's Margarita</div>
-        <div class="cocktail__box">Manhattan</div>
-        <div class="cocktail__box">Piña colada</div>
-      </div>
-    </li>
+  <h2>Lista de cócteles</h2>
+  <ul class="list js__list">
+    <li class="list__box">Margarita</li>
+    <li class="list__box">Blue Margarita</li>
+    <li class="list__box">Tommy's Margarita</li>
+    <li class="list__box">Manhattan</li>
+    <li class="list__box">Piña colada</li>
   </ul>
 </section>
 
