--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../scss/main.scss" />
+    <link rel="stylesheet" href="./assets/css/main.css" />
     <title>Rosa Codina's cocktails site</title>
   </head>
 
   <body>
     <include src="./header.html"></include>
     <include src="./main.html"></include>
-    <script src="../js/main.js"></script>
+    <script src="./assets/js/main.js"></script>
   </body>
 </html>
