I achieved to pint the list on my website and I deleted it on the HTML

--- a/public/index.html
+++ b/public/index.html
@@ -23,13 +23,7 @@
 
     <section>
       <h2>Lista de cócteles</h2>
-      <ul class="list js__list">
-        <li class="list__box">Margarita</li>
-        <li class="list__box">Blue Margarita</li>
-        <li class="list__box">Tommy's Margarita</li>
-        <li class="list__box">Manhattan</li>
-        <li class="list__box">Piña colada</li>
-      </ul>
+      <ul class="list js__list"></ul>
     </section>
 
     <footer>
