I took the term that the user might type and I got to compare it with the list, so then it prints if the word matches with any of the cocktails

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       </section>
 
       <section>
-        <input type="text" placeholder="Buscar" />
+        <input id="search" type="text" placeholder="Buscar" />
         <button class="js__buttonSearch">Buscar</button>
         <button>Actualizar</button>
       </section>
